--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -38,5 +38,10 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+       <service
+           android:name=".ForegroundService"
+           android:enabled="true"
+           android:exported="false" />
+
     </application>
 </manifest>
