--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   permission_handler: ^8.1.4+2
+  flutter_local_notifications: ^9.7.0
 
+  rxdart: ^0.27.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
