--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,9 +1,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="uk.co.darkerwaters.flic_button">
+    package="uk.co.darkerwaters.flic_button">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
 
     <application>
+        <!-- Add this line -->
+        <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id" android:value="@string/default_notification_channel_id" />
+
         <service android:name="uk.co.darkerwaters.flic_button.ControlService" />
+        <!-- Only keep the Flic2Service declaration once -->
+        <service android:name="uk.co.darkerwaters.flic_button.Flic2Service" />
+        <service
+            android:name=".FlicFcmService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 </manifest>
