--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   permission_handler: ^8.1.4+2
   flutter_local_notifications: ^9.7.0
+  provider: ^6.0.5
 
   rxdart: ^0.27.5
 dev_dependencies:
